Vertex transform origin ignores Normalize option in graph editor #40338

Closed
opened 2014-05-24 17:16:04 +02:00 by Konstantins Visnevskis · 9 comments

Vista64, gtx580, 2.70a
In graph editor, when Normalize option is on, handles are scaled against non-normalized origin, resulting out of proportion to mouse scaling amount and often out of screen "zero-point".

  • Add a keyframe considerably out of -1..1 value range,
  • in Graph editor, turn Normalize on,
  • scale the keyframe handles. Scaling origin is not where the keyframe is (assuming bounding box or individual origin scaling).
Vista64, gtx580, 2.70a In graph editor, when Normalize option is on, handles are scaled against non-normalized origin, resulting out of proportion to mouse scaling amount and often out of screen "zero-point". - Add a keyframe considerably out of -1..1 value range, - in Graph editor, turn Normalize on, - scale the keyframe handles. Scaling origin is not where the keyframe is (assuming bounding box or individual origin scaling).

Changed status to: 'Open'

Changed status to: 'Open'

Added subscriber: @KonstantinsVisnevskis

Added subscriber: @KonstantinsVisnevskis

My mistake - there should be at least two keyframes of not the same value to see the effect.

My mistake - there should be at least two keyframes of not the same value to see the effect.

Added subscriber: @mont29

Added subscriber: @mont29

Added subscriber: @ideasman42

Added subscriber: @ideasman42

Transform code is using un-normalized locations, therefor it operates as if the keyframe is very far from the mouse, when the display makes it look close

Transform code is using un-normalized locations, therefor it operates as if the keyframe is very far from the mouse, when the display makes it look close
Sergey Sharybin was assigned by Campbell Barton 2014-05-28 13:33:09 +02:00

This issue was referenced by 7c8be33d14

This issue was referenced by 7c8be33d14a3de8f0dfff91bf3e9dc55f81d0c30

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 7c8be33d14.

Closed by commit 7c8be33d14.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#40338
No description provided.