Fix T40338: Vertex transform origin ignores Normalize option in graph editor

Simply apply unit scale on curve transdata and un-apply on flush.

Needs some more intense testing tho.